--- a/configs/mcp-gateway.yaml
+++ b/configs/mcp-gateway.yaml
@@ -21,7 +21,7 @@ storage:
   type: "${GATEWAY_STORAGE_TYPE:db}"  # disk or db
   # Database configuration (only used when type is db)
   database:
-    type: "${GATEWAY_DB_TYPE:sqlite}"
+    type: "${GATEWAY_DB_TYPE:mysql}"
     host: "${GATEWAY_DB_HOST:localhost}"
     port: ${GATEWAY_DB_PORT:5432}
     user: "${GATEWAY_DB_USER:postgres}"
