--- a/configs/mcp-gateway.yaml
+++ b/configs/mcp-gateway.yaml
@@ -1,5 +1,5 @@
 port: ${MCP_GATEWAY_PORT:5235}
-pid: "${MCP_GATEWAY_PID:/var/run/mcp-gateway.pid}"
+pid: "${MCP_GATEWAY_PID:./run/mcp-gateway.pid}"
 reload_interval: ${MCP_GATEWAY_RELOAD_INTERVAL:600s}
 reload_switch: ${MCP_GATEWAY_RELOAD_SWITCH:true}
 
@@ -8,7 +8,7 @@ logger:
   level: "${LOGGER_LEVEL:info}"                                           # debug, info, warn, error
   format: "${LOGGER_FORMAT:json}"                                         # json, console
   output: "${LOGGER_OUTPUT:stdout}"                                       # stdout, file
-  file_path: "${LOGGER_FILE_PATH:/var/log/unla/mcp-gateway.log}"   # path to log file when output is file
+  file_path: "${LOGGER_FILE_PATH:./log/unla/mcp-gateway.log}"   # path to log file when output is file
   max_size: ${LOGGER_MAX_SIZE:100}                                        # max size of log file in MB
   max_backups: ${LOGGER_MAX_BACKUPS:3}                                    # max number of backup files
   max_age: ${LOGGER_MAX_AGE:7}                                            # max age of backup files in days
@@ -45,7 +45,7 @@ notifier:
   # Signal configuration (only used when type is signal)
   signal:
     signal: "${NOTIFIER_SIGNAL:SIGHUP}"
-    pid: "${NOTIFIER_SIGNAL_PID:/var/run/mcp-gateway.pid}"
+    pid: "${NOTIFIER_SIGNAL_PID:./run/mcp-gateway.pid}"
 
   # API configuration (only used when type is api)
   api:
